overflow-y: scroll always to prevent content shift on pages with less vertical content

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,7 +2,8 @@
 body {
   background: #eeeeee;
   margin: 0;
-  
+  overflow-y: scroll;
+
   * {
     // border: 1px solid red;
     font-family: "Segoe UI", Helvetica, Arial, sans-serif;
@@ -109,7 +110,7 @@ a {
       font-weight: 500;
       margin: 10px 20px 0;
     }
-    
+
     .item-description {
       display: block;
       color: #757575;
